syntax = "proto3";

package note;

option go_package = "github.com/yahn1ukov/scribble/libs/grpc/note";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Note {
    string id = 1;
    string title = 2;
    string body = 3;
    google.protobuf.Timestamp created_at = 4;
}

message Notes {
    repeated Note notes = 1;
}

message CreateNoteRequest {
    string title = 1;
    string body = 2;
    string notebook_id = 3;
}

message CreateNoteResponse {
    string id = 1;
}

message GetAllNotesRequest {
    string notebook_id = 1;
}

message GetNoteRequest {
    string id = 1;
    string notebook_id = 2;
}

message UpdateNoteRequest {
    string id = 1;
    string title = 2;
    string body = 3;
    string notebook_id = 4;
}

message DeleteNoteRequest {
    string id = 1;
    string notebook_id = 2;
}

service NoteService {
    rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse);
    rpc GetAllNotes(GetAllNotesRequest) returns (Notes);
    rpc GetNote(GetNoteRequest) returns (Note);
    rpc UpdateNote(UpdateNoteRequest) returns (google.protobuf.Empty);
    rpc DeleteNote(DeleteNoteRequest) returns (google.protobuf.Empty);
}
